# ESP-Host-Bridge-Unraid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: bom.md  integration-model.md  status-contract.md
esp_host_bridge/: __init__.py  agent.py  cli.py  config.py  host_ui.css  host_ui.js  mac.py  metrics.py  runtime.py  serial.py  ui_assets.py  unraid_api.py  webui.py  webui_app.py  webui_templates.py
esp_host_bridge/integrations/: __init__.py  base.py  docker.py  host.py  registry.py  unraid.py  vms.py
scripts/: publish_github_release.sh  refresh_unraid_overlay_patch.sh  sync_core_from_host_bridge.sh  unraid_core_overlay.patch  unraid_overlay_files.txt
tests/: test_config_paths.py  test_integration_registry.py  test_mac_overrides.py  test_runtime_snapshot.py  test_status_contract.py  test_unraid_webui.py  test_usb_payload_contract.py
unraid_plugin/: README.md  build_unraid_plugin.sh
unraid_plugin/templates/: esp-host-bridge.page  plugin-env.sh  rc.esp_host_bridge  run-webui.sh  service.php  slack-desc  starting_array  stopped_array
